新規Q&Aのみメール対応

--- a/config_template.json
+++ b/config_template.json
@@ -1,6 +1,13 @@
 {
-  "niconidoId" : "hoge@fuga",
-  "niconicoPassword" : "hogefuga",
-  "slackWebApiToken" : "xoxp-49813274918",
-  "slackChannel" : "channelname"
+  "niconidoId": "hoge@fuga",
+  "niconicoPassword": "hogefuga",
+  "slackWebApiToken": "xoxp-49813274918",
+  "slackChannel": "channelname",
+  "mailSetting": {
+    "service": "Gmail",
+    "auth": {
+      "user": "xxxxx@gmail.com",
+      "pass": "xxxxxx"
+    }
+  }
 }
