--- a/replay_checker/replay_checker_config_template.json
+++ b/replay_checker/replay_checker_config_template.json
@@ -2,12 +2,5 @@
   "niconidoId" : "hoge@fuga",
   "niconicoPassword" : "hogefuga",
   "slackWebApiToken" : "xoxp-49813274918",
-  "slackChannel" : "channelname",
-  "mailSetting": {
-    "service": "Gmail",
-    "auth": {
-      "user": "xxxxx@gmail.com",
-      "pass": "xxxxxx"
-    }
-  }
+  "slackChannel" : "channelname"
 }
