正規表現フィルターで複数のチャンネルを登録できるように拡張

--- a/config_template.json
+++ b/config_template.json
@@ -2,7 +2,7 @@
   "niconidoId": "hoge@fuga",
   "niconicoPassword": "hogefuga",
   "slackWebApiToken": "xoxp-49813274918",
-  "slackChannel": "channelname",
+  "slackChannelAndFilters" : [["channelname", ".*"]],
   "mailSetting": {
     "service": "Gmail",
     "auth": {
