--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "eslint": "^2.8.0"
   },
   "dependencies": {
-    "cheerio-httpcli": "^0.7.1",
-    "nodemailer": "^3.1.8",
-    "request": "^2.72.0"
+    "@slack/client": "^5.0.1",
+    "cheerio-httpcli": "^0.7.4",
+    "nodemailer": "^3.1.8"
   }
 }
