--- a/replay_checker/replay_checker_config_template.json
+++ b/replay_checker/replay_checker_config_template.json
@@ -1,6 +1,6 @@
 {
   "niconidoId" : "hoge@fuga",
   "niconicoPassword" : "hogefuga",
-  "slackWebApiToken" : "xoxp-49813274918",
-  "slackChannel" : "channelname"
+  "slackWebApiToken" : "xoxp-49813274918-bot-token",
+  "slackChannel" : "channelId"
 }
